[UPD] Restruct project
